style(Empty): fix opacity in dark mode (#11027)

--- a/packages/vant/src/empty/index.less
+++ b/packages/vant/src/empty/index.less
@@ -39,3 +39,7 @@
     margin-top: var(--van-empty-bottom-margin-top);
   }
 }
+
+.van-theme-dark .van-empty {
+  opacity: 0.5;
+}
